--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 <ul>
                   <li>
                     <i class="icofont-rounded-right"></i>
-                    <strong>City:</strong> Bangalore, Karnataka
+                    <strong>City:</strong> Edinburgh, UK
                   </li>
                   <li>
                     <i class="icofont-rounded-right"></i>
